--- a/src/styles/scrollers.scss
+++ b/src/styles/scrollers.scss
@@ -15,6 +15,7 @@
     display: initial;
     border-radius: 0 !important;
     background-color: rgba(225, 225, 225, 0.1) !important;
+    background-clip: padding-box !important;
 }
 
 ::-webkit-scrollbar-thumb:hover {
